@@ -12,6 +12,11 @@ What's New in Python 2.6 alpha 1?
 Core and builtins
 -----------------
 
+- Patch #1675423: PyComplex_AsCComplex() now tries to convert an object
+  to complex using its __complex__() method before falling back to the
+  __float__() method. Therefore, the functions in the cmath module now
+  can operate on objects that define a __complex__() method.
+
 - Patch #1623563: allow __class__ assignment for classes with __slots__.
   The old and the new class are still required to have the same slot names.
 
